--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-fastapi
-aiogram
-supabase
-PyMuPDF==1.21.1
-uvicorn
-python-multipart
-aiohttp
+Flask>=2.2
+gunicorn>=23.0.0
+supabase==1.0.3
+pdf417gen>=0.8.1
+Pillow>=9.0.0
+qrcode[pil]>=7.3.0
+reportlab>=3.6.12
+PyMuPDF==1.22.5
+PyPDF2>=3.0.1
+vonage==3.3.0
+pydantic<2.0
