--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-aiogram==3.1.1
+Flask>=2.2
+gunicorn>=23.0.0
+supabase==1.0.3
+pdf417gen>=0.8.1
+Pillow>=9.0.0
+qrcode[pil]>=7.3.0
+reportlab>=3.6.12
+PyMuPDF==1.22.5
+PyPDF2>=3.0.1
+vonage==3.3.0
+pydantic<2.0
 fastapi==0.103.1
 uvicorn==0.23.2
-supabase==1.0.4
-PyMuPDF==1.23.5
-Pillow==10.0.0
-qrcode==7.4.2
+aiogram==3.1.1
 python-multipart==0.0.6
