--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ reportlab>=3.6.12
 PyMuPDF==1.22.5
 PyPDF2>=3.0.1
 vonage==3.3.0
-pydantic<2.0
+pydantic>=2.0
 fastapi==0.103.1
 uvicorn==0.23.2
 aiogram==3.1.1
