--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Flask>=2.2
-gunicorn>=23.0.0
-supabase==1.0.3
-pdf417gen>=0.8.1
-Pillow>=9.0.0
-qrcode[pil]>=7.3.0
-reportlab>=3.6.12
-PyMuPDF==1.22.5
-PyPDF2>=3.0.1
-vonage==3.3.0
-pydantic>=2.0
-fastapi==0.103.1
-uvicorn==0.23.2
-aiogram==3.1.1
-python-multipart==0.0.6
+fastapi
+aiogram
+supabase
+PyMuPDF==1.21.1
+uvicorn
+python-multipart
+aiohttp
+Flask==2.3.3
+gunicorn==21.2.0
+reportlab==4.0.5
+python-dotenv==1.0.1
+qrcode==7.3.1
+apscheduler==3.10.4
+openpyxl==3.1.2
+xlsxwriter==3.2.0
